[Add] Implement debug zone with TypeScript Migrate old JavaScript codes

--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
 
     <!-- container -->
     <div id="footer">
-      <p>
-        <span id="position"><strong>-</strong> [ms]</span>
-      </p>
       <div id="control" style="display: none">
-        <button id="play" disabled>再生</button>
-        <button id="jump" disabled>歌詞頭出し</button>
-        <button id="pause" disabled>一時停止</button>
-        <button id="rewind" disabled>巻き戻し</button>
+        <button id="play">▶️ Play</button>
+        <button id="jump">⤵️ Jump</button>
+        <button id="pause">⏸ Pause</button>
+        <button id="stop">⏹ Stop</button>
+        <br>
+        <input type="range" id="position" value="0" step="0.1" style="width: 280px">
       </div>
     </div>
     <!-- container -->
