--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="dist/bundle.js"></script>
   <title>mm2021</title>
+
+  <style>
+    html,
+    body {
+      margin: 0;
+      height: 100%;
+    }
+
+    #three {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -48,4 +63,5 @@
 
   <canvas id="three"></canvas>
 </body>
+
 </html>
