--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       body {
         margin: 0;
         height: 100%;
+        overflow: hidden;
       }
 
       #three {
@@ -30,7 +31,7 @@
   </head>
 
   <body>
-    <div id="debug">
+    <div id="debug" style="display: none">
       <!-- header -->
       <div id="header">
         <div id="meta">
