[Add] #22 Add blackboard and chalks

--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="dist/bundle.js"></script>
-    <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="./public/style.css" />
     <title>mm2021</title>
   </head>
 
   <body>
-    <div class="layer-wrap">
+    <div id="layer-wrap">
       <canvas id="three"></canvas>
       <canvas id="paint"></canvas>
+    </div>
+
+    <button id="eraser"></button>
+
+    <div id="chalks">
+      <button id="chalk-white"></button>
+      <button id="chalk-miku"></button>
+      <button id="chalk-rin"></button>
+      <button id="chalk-luka"></button>
+      <button id="chalk-kaito"></button>
+      <button id="chalk-meiko"></button>
     </div>
 
     <div id="loading">
