--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="dist/bundle.js"></script>
-    <link rel="stylesheet" href="./public/style.css" />
+    <script src="bundle.js"></script>
+    <link rel="stylesheet" href="style.css" />
     <title>mm2021</title>
   </head>
 
