--- a/index.html
+++ b/index.html
@@ -29,46 +29,42 @@
       <div class="loader"></div>
     </div>
 
-    <div id="debug" style="display: none">
-      <!-- header -->
-      <div id="header">
-        <div id="meta">
-          <div id="artist"><strong>artist:</strong> <span>-</span></div>
-          <div id="song"><strong>song:</strong> <span>-</span></div>
+    <div id="debug">
+      <div>
+        <div class="header">[Song]</div>
+        <div id="song">-</div>
+      </div>
+      <div>
+        <div class="header">[Artist]</div>
+        <div id="artist">-</div>
+      </div>
+      <div>
+        <div class="header">[Phrase]</div>
+        <div id="phrase">-</div>
+      </div>
+      <div>
+        <div class="header">[Word]</div>
+        <div id="word">-</div>
+      </div>
+      <div>
+        <div class="header">[Beats]</div>
+        <div id="beats">-</div>
+      </div>
+      <div>
+        <div class="header">[Chords]</div>
+        <div id="chords">-</div>
+      </div>
+      <div>
+        <div class="header">[V/A]</div>
+        <div>
+          <div>Valence: <span id="va-valence">-</span></div>
+          <div>Arousal: <span id="va-arousal">-</span></div>
+          <div>Result: <span id="va-result">-</span></div>
         </div>
-        <!-- header -->
-
-        <!-- container -->
-        <div id="container">
-          <div id="lyrics">
-            <div><strong>word:</strong> <span id="text">-</span></div>
-            <div><strong>phrase:</strong> <span id="phrase">-</span></div>
-            <div><strong>beats:</strong> <span id="beats">-</span></div>
-            <div><strong>chords:</strong> <span id="chords">-</span></div>
-            <div><strong>V/A:</strong> <span id="va">-</span></div>
-            <div><strong>amplitude:</strong> <span id="amplitude">-</span></div>
-          </div>
-        </div>
-        <!-- container -->
-
-        <!-- container -->
-        <div id="footer">
-          <div id="control" style="display: none">
-            <button id="play">▶️ Play</button>
-            <button id="jump">⤵️ Jump</button>
-            <button id="pause">⏸ Pause</button>
-            <button id="stop">⏹ Stop</button>
-            <br />
-            <input
-              type="range"
-              id="position"
-              value="0"
-              step="0.1"
-              style="width: 280px"
-            />
-          </div>
-        </div>
-        <!-- container -->
+      </div>
+      <div>
+        <div class="header">[Amplitude]</div>
+        <div id="amplitude">-</div>
       </div>
     </div>
   </body>
