[Fix] #35 Chalk buttons are overflowed in small display

--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
       <canvas id="three"></canvas>
     </div>
 
-    <button id="eraser"></button>
-
     <div id="chalks">
-      <button id="chalk-white"></button>
-      <button id="chalk-miku"></button>
-      <button id="chalk-rin"></button>
-      <button id="chalk-ren"></button>
-      <button id="chalk-luka"></button>
-      <button id="chalk-kaito"></button>
-      <button id="chalk-meiko"></button>
+      <button id="eraser"></button>
+      <button id="white"></button>
+      <button id="miku"></button>
+      <button id="rin"></button>
+      <button id="ren"></button>
+      <button id="luka"></button>
+      <button id="kaito"></button>
+      <button id="meiko"></button>
     </div>
 
     <div id="loading">
