--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>mm2021</title>
   </head>
 
-  <body>
+  <body oncontextmenu="return false;" oncopy="return false;">
     <div id="layer-wrap">
       <canvas id="three"></canvas>
     </div>
