【add】Added screenshot function
Implemented the ability to download a screenshot of the entire screen.

--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
   </head>
 
   <body oncontextmenu="return false;" oncopy="return false;">
-    <div id="layer-wrap">
-      <canvas id="three"></canvas>
-    </div>
+    <div id="capture">
+      <div id="layer-wrap">
+        <canvas id="three"></canvas>
+      </div>
 
-    <div id="chalks">
-      <button id="eraser"></button>
-      <button id="white"></button>
-      <button id="miku"></button>
-      <button id="rin"></button>
-      <button id="ren"></button>
-      <button id="luka"></button>
-      <button id="kaito"></button>
-      <button id="meiko"></button>
+      <div id="chalks">
+        <button id="eraser"></button>
+        <button id="white"></button>
+        <button id="miku"></button>
+        <button id="rin"></button>
+        <button id="ren"></button>
+        <button id="luka"></button>
+        <button id="kaito"></button>
+        <button id="meiko"></button>
+      </div>
     </div>
 
     <div id="loading">
