[Change] Application name is mikuban

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="bundle.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>mm2021</title>
+    <title>みくばん - Mikuban</title>
   </head>
 
   <body oncontextmenu="return false;" oncopy="return false;">
